--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <header>
         <p>header</p>
         <h1>Hi!</h1>
-        <p class="self">Nice to meet you. Do you like sushi? Yeah! I'm fine. and you? me too! Yeah! You are welcome!</p>
+        <p class="self" id="self">Nice to meet you. Do you like sushi? Yeah! I'm fine. and you? me too! Yeah! You are welcome!</p>
       </header>
       <main>
         <p>main</p>
@@ -61,7 +61,9 @@
         <small>&copy<br>Toshiya<br>Marukubo<br>2020</small>
       </footer>
     </div>
+    <span id="hamburger"><a href="#">=</a></span>
     <canvas id='canvas'>Canvas not supported.</canvas>
+    <script defer src="./scripts/hamburger.js"></script>
     <script defer src="./scripts/glitch.js"></script>
     <script defer src="./scripts/pixcelDataMap.js"></script>
     <script>
