--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
     <meta property="og:title" content="Toshiya Marukubo | Homepage">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/og-image.png">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/og-home.png">
     <meta property="og:description" content="Unemployed.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
