--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <small>&copy<br>Toshiya<br>Marukubo<br>2020</small>
       </footer>
     </div>
-    <span id="hamburger"><a href="#"><p>nav</p>=</a></span>
+    <nav id="hamburger"><a href="#"><p>nav</p>=</a></nav>
     <canvas id='canvas'>Canvas not supported.</canvas>
     <script defer src="./scripts/hamburger.js"></script>
     <script defer src="./scripts/glitch.js"></script>
