--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
           <li><a href="./pattern/index.html">Pattern <br class="return">(Not updated)</a></li>
           <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 <br class="return">(Not updated)</a></li>
         </ul>
+        <h2>My skills</h2>
+        <ul>
+          <li>HTML <br class="return">(If I can google.)</li>
+          <li>CSS <br class="return">(If I can google.)</li>
+          <li>JavaScript <br class="return">(If I can google.)</li>
+          <li>Node.js <br class="return">(Even if I can google...)</li>
+        </ul>
+        <h2>My dream</h2>
+        <ul>
+          <li>I want to work with fantastic designer.</li>
+        </ul>
       </main>
       <footer>
         <p>footer</p>
