--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             sh = body.scrollHeight;
             of = window.pageYOffset;
             if (sh - (ch + of) <= 0) {
-              self.textContent = "I'm Toshiya Marukubo. Thank you for visiting my site. I'm not a web designer, or engineer. I want to be it someday.";
+              self.textContent = "I'm Toshiya Marukubo. Thank you for visiting my site. I'm not a web designer, or engineer. I want to be it someday. Maybe... :)";
             }
           }, false);
         }, false);
