added loading animation.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <title>Toshiya Marukubo | Homepage</title>
   </head>
   <body>
+    <!-- loading -->
+    <canvas id='loading_canvas'>Canvas not supported.</canvas>
     <div id='container'>
       <header>
         <p>header</p>
@@ -43,17 +45,17 @@
         <p>main</p>
         <h2>Links</h2>
         <ul>
-          <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
-          <li><a href="https://www.instagram.com/toshiyamarukubo/">Instagram</a></li>
-          <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-          <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
-          <li><a href="http://www.marukubo.net/">Learning Place <br class="return">(Learning Node.js, mongoDB)</a></li>
+          <li><a href="https://twitter.com/toshiyamarukubo" target="_blank" rel="noopener">Twitter</a></li>
+          <li><a href="https://www.instagram.com/toshiyamarukubo/" target="_blank" rel="noopener">Instagram</a></li>
+          <li><a href="https://codepen.io/toshiya-marukubo" target="_blank" rel="noopener">CodePen</a></li>
+          <li><a href="https://github.com/toshiya-marukubo" target="_blank" rel="noopener">GitHub</a></li>
+          <li><a href="http://www.marukubo.net/" target="_blank" rel="noopener">Learning Place <br class="return">(Learning Node.js, mongoDB)</a></li>
         </ul>
         <h2>Choose my challenge</h2>
         <ul>
-          <li><a href="./scrollColors/index.html">SCROLL COLORS <br class="return">(prototype)</a></li>
-          <li><a href="./pattern/index.html">Pattern <br class="return">(Not updated)</a></li>
-          <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 <br class="return">(Not updated)</a></li>
+          <li><a href="./scrollColors/index.html" target="_blank" rel="noopener">SCROLL COLORS <br class="return">(prototype)</a></li>
+          <li><a href="./pattern/index.html" target="_blank" rel="noopener">Pattern <br class="return">(Not updated)</a></li>
+          <li><a href="./100workschallenge/index.html" target="_blank" rel="noopener">100 Works Challenge 2020 <br class="return">(Not updated)</a></li>
         </ul>
         <h2>My skills</h2>
         <ul>
@@ -70,6 +72,7 @@
     </div>
     <nav id="hamburger"><a href="#"><p>nav</p>=</a></nav>
     <canvas id='canvas'>Canvas not supported.</canvas>
+    <script defer src="./scripts/loading.js"></script>
     <script defer src="./scripts/hamburger.js"></script>
     <script defer src="./scripts/glitch.js"></script>
     <script defer src="./scripts/pixcelDataMap.js"></script>
