change my photo.

--- a/100workschallenge/index.html
+++ b/100workschallenge/index.html
@@ -171,7 +171,7 @@
         <section id="about" class="cf">
           <h3>About</h3>
           <div class="aboutLeft">
-            <p><img loading="lazy" src="./home/img/mypicture.jpg" alt="my picture"></p>
+            <p><img loading="lazy" src="./home/img/mypicture.png" alt="my picture"></p>
             <ul>
               <li><a href="http://www.marukubo.net">Learning Place</a></li>
               <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
