--- a/indexNormal.html
+++ b/indexNormal.html
@@ -354,7 +354,7 @@
 
       (function() {
         'use strict';
-        window.addEventListener('load', function() {
+        window.addEventListener('DOMContentLoaded', function() {
           var canvas = document.getElementById('canvas');
 
           if (!canvas || !canvas.getContext) return false;
