--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
   </div>
   <canvas id='canvas'>Canvas not supported.</canvas>
   <script>
-    /*
-    * create multiple array
-    */
+    /**
+     * create multiple array
+     */
 
     function createMultipleArray(number_one, number_two) {
       var num_one = number_one;
@@ -176,20 +176,20 @@
       return arr;
     }
 
-    /*
-    * get random number
-    */
+    /**
+     * get random number
+     */
 
     function getRandomNumber(min, max) {
       return Math.floor(Math.random() * (max + 1 - min)) + min;
     }
 
-    /*
-    * File Name / pixcelDataMap.js (prototype version)
-    * Created Date / Jan 18, 2021
-    * Aurhor / Toshiya Marukubo
-    * Twitter / https://twitter.com/toshiyamarukubo
-    */
+    /**
+     * File Name / pixcelDataMap.js (prototype version)
+     * Created Date / Jan 18, 2021
+     * Aurhor / Toshiya Marukubo
+     * Twitter / https://twitter.com/toshiyamarukubo
+     */
 
     function PixcelDataMap(ctx, x, y) {
       this.ctx = ctx;
@@ -282,9 +282,9 @@
       this.updateState();
     };
 
-    /*
-    * Shapes
-    */
+    /**
+     * Shapes
+     */
 
     function Shapes(ctx, x, y) {
       this.ctx = ctx;
@@ -342,43 +342,61 @@
       }
     };
 
-    /*
-    *  Glitch
-    */
+    /**
+     * Glitch
+     */
 
-    function Glitch(ctx, width, height, splitNumber) {
+    function Glitch(ctx, width, height) {
       this.time;
       this.ctx = ctx;
       this.width = width;
       this.height = height;
-      this.splitNum = splitNumber;
       this.splitH = this.height / this.splitNum;
       this.dataArr = [];
+      this.yPosArr = [];
     }
 
     Glitch.prototype.getImageData = function () {
-      for (var i = 0; i < this.splitNum; i++) {
-        var d = this.ctx.getImageData(0, this.splitH * i, this.width, this.splitH + 1);
+      var startHeight = 0;
+      for (var i = 0; i < this.height + 50; i += randomHeight) {
+        var rand = Math.random();
+        var randomHeight = Math.floor(getRandomNumber(1, 50));
+        startHeight += randomHeight;
+        var d = this.ctx.getImageData(0, startHeight, this.width, startHeight + randomHeight);
+        if (rand < 0.01) {
+          for (var j = 0; j < d.data.length; j++) {
+            d.data[j * 4 + 0] = Math.floor(getRandomNumber(0, 60));
+            d.data[j * 4 + 1] = Math.floor(getRandomNumber(150, 200));
+            d.data[j * 4 + 2] = Math.floor(getRandomNumber(150, 200));
+            d.data[j * 4 + 3] = 200;
+          }
+        }
+        if (rand > 0.01 && rand < 0.02) {
+          for (var j = 0; j < d.data.length; j++) {
+            d.data[j * 4 + 0] = Math.floor(getRandomNumber(200, 255));
+            d.data[j * 4 + 1] = Math.floor(getRandomNumber(0, 20));
+            d.data[j * 4 + 2] = Math.floor(getRandomNumber(0, 100));
+            d.data[j * 4 + 3] = 200;
+          }
+        }
         this.dataArr.push(d);
+        this.yPosArr.push(startHeight);
       }
     };
 
     Glitch.prototype.addImage = function () {
-      for (var i = 0; i < this.splitNum; i++) {
+      for (var i = 0; i < this.dataArr.length; i++) {
         if (Math.random() < 0.9) {
           this.ctx.putImageData(
-            //this.dataArr[getRandomNumber(0, this.splitNum - 1)],
             this.dataArr[i],
-            Math.sin(this.time * 1 + i * 1 * Math.PI / 180) * 100,
-            //this.width * Math.random(),
-            this.splitH * i
+            Math.sin(this.time * 1 + i * 10 * Math.PI / 180) * 100,
+            this.yPosArr[i]
           );
         } else {
           this.ctx.putImageData(
-            this.dataArr[getRandomNumber(0, this.splitNum - 1)],
-            //Math.sin(this.time * 1 + i * 1 * Math.PI / 180) * 100,
+            this.dataArr[getRandomNumber(0, this.dataArr.length - 1)],
             this.width * Math.random(),
-            this.splitH * i
+            this.yPosArr[i]
           );
         }
       }
@@ -387,6 +405,7 @@
     Glitch.prototype.render = function () {
       this.time = Date.now() / 1000;
       this.dataArr = [];
+      this.yPosArr = [];
       this.getImageData();
       this.addImage();
     };
@@ -422,7 +441,7 @@
         var timerId;
 
         window.addEventListener('scroll', function () {
-          g = new Glitch(c, x, y, 300);
+          g = new Glitch(c, x, y);
           flg = true;
           clearTimeout(timerId);
           timerId = setTimeout(function () {
