--- a/index.html
+++ b/index.html
@@ -358,10 +358,9 @@
 
     Glitch.prototype.getImageData = function () {
       var startHeight = 0;
-      for (var i = 0; i < this.height + 30; i += randomHeight) {
+      for (var i = 0; i < this.height; i += randomHeight) {
         var rand = Math.random();
         var randomHeight = Math.floor(getRandomNumber(1, 30));
-        startHeight += randomHeight;
         var d = this.ctx.getImageData(0, startHeight, this.width, startHeight + randomHeight);
         if (rand < 0.05) {
           for (var j = 0; j < d.data.length; j++) {
@@ -379,6 +378,7 @@
             d.data[j * 4 + 3] = 150;
           }
         }
+        startHeight += randomHeight;
         this.dataArr.push(d);
         this.yPosArr.push(startHeight);
       }
