--- a/index.html
+++ b/index.html
@@ -60,15 +60,25 @@
         font-size: 67.5%;
         line-height: 1.6rem;
       }
+      body:after {
+        z-index: 1;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.2));
+      }
       .container {
-        overflow: scroll;
+        z-index: 2;
+        overflow-y: scroll;
         position: absolute;
         padding: 32px;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.2));
       }
       h1,
       h2,
@@ -119,7 +129,6 @@
       @media (min-width: 500px) {
         .container {
           padding: 64px;
-          background: linear-gradient(to right, rgba(0,0,0,0.9), rgba(0,0,0,0));
         }
       }
     </style>
