--- a/works.html
+++ b/works.html
@@ -65,6 +65,7 @@
         margin: 0 auto;
         height: 100vh;
         overflow-y: scroll;
+        scroll-snap-type: y mandatory;
       }
       h1 {
         font-size: 5rem;
@@ -126,6 +127,7 @@
         height: 100vh;
         overflow: hidden;
         position: relative;
+        scroll-snap-align: start;
       }
       section > p {
         width: 90%;
