--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <li><a href="http://www.marukubo.net/">Leaning Place (for node.js)</a></li>
         <li class="made">I made
           <ul>
+            <li><a href="https://toshiya-marukubo.github.io/works.html">WORKS & LEARNING</a></li>
             <li><a href="https://toshiya-marukubo.github.io/scrollColors/index.html">SCROLL COLORS (prototype)</a></li>
             <li><a href="https://toshiya-marukubo.github.io/pattern/index.html">Pattern (Not updated)</a></li>
             <li><a href="https://toshiya-marukubo.github.io/100workschallenge/index.html">100 Works Challenge 2020 (Not updated)</a></li>
