--- a/works.html
+++ b/works.html
@@ -290,9 +290,11 @@
       };
 
       var init = function() {
-        vh = window.innerHeight;
+        //vh = window.innerHeight;
         container = document.getElementById('container');
-        container.style.height = vh + 'px';
+        //container.style.height = vh + 'px';
+        var vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty('--vh', `${vh}px`);
         now = document.getElementById('now');
         index = 0;
         count = 0;
@@ -333,8 +335,10 @@
         }, false);
 
         window.addEventListener('resize', function() {
-          vh = window.innerHeight;
-          container.style.height = vh + 'px';
+          //vh = window.innerHeight;
+          //container.style.height = vh + 'px';
+          var vh = window.innerHeight * 0.01;
+          document.documentElement.style.setProperty('--vh', `${vh}px`);
         }, false);
       }, false);
     })();
