--- a/works.html
+++ b/works.html
@@ -46,11 +46,6 @@
         text-decoration: none;
         color: #fff;
       }
-      html,
-      body {
-        width: 100vw;
-        height: 100vh;
-      }
       body {
         overflow: hidden;
         font-family: sans-serif;
@@ -125,7 +120,7 @@
         padding-left: 0.8rem;
       }
       section {
-        height: 100vh;
+        height: 100%;
         overflow: hidden;
         position: relative;
         scroll-snap-align: start;
