--- a/works.html
+++ b/works.html
@@ -60,6 +60,7 @@
         margin: 0 auto;
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
+        height: 100%;
         overflow-y: scroll;
         scroll-snap-type: y mandatory;
       }
