--- a/works.html
+++ b/works.html
@@ -60,7 +60,6 @@
         margin: 0 auto;
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
-        height: 100%;
         overflow-y: scroll;
         scroll-snap-type: y mandatory;
       }
@@ -294,10 +293,10 @@
       };
 
       var init = function() {
-        //vh = window.innerHeight;
+        vh = window.innerHeight;
         container = document.getElementById('container');
         //container.style.height = vh + 'px';
-        container.style.height = '100%';
+        //container.style.height = '100%';
         //var vh = window.innerHeight * 0.01;
         //document.documentElement.style.setProperty('--vh', vh + 'px');
         now = document.getElementById('now');
@@ -340,9 +339,9 @@
         }, false);
 
         window.addEventListener('resize', function() {
-          //vh = window.innerHeight;
-          //container.style.height = vh + 'px';
-          container.style.height = '100%';
+          vh = window.innerHeight;
+          container.style.height = vh + 'px';
+          //container.style.height = '100%';
           //var vh = window.innerHeight * 0.01;
           //document.documentElement.style.setProperty('--vh', vh + 'px');
         }, false);
