--- a/works.html
+++ b/works.html
@@ -293,6 +293,7 @@
       };
 
       var init = function() {
+        container = document.getElementById('container');
         vh = window.innerHeight * 0.01;
         document.documentElement.style.setProperty('--vh', vh + 'px');
         now = document.getElementById('now');
