--- a/works.html
+++ b/works.html
@@ -73,7 +73,7 @@
       }
       h2 {
         color: #000;
-        font-size: 1.6rem;
+        font-size: 1rem;
         position: absolute;
         text-align: center;
         padding: 4.8rem 0;
@@ -99,7 +99,7 @@
         transition: opacity 0.8s;
       }
       ul {
-        font-size: 1.6rem;
+        font-size: 1rem;
         text-align: center;
         padding: 4.8rem 0;
         font-style: normal;
@@ -159,14 +159,14 @@
       }
       .dataFrom {
         color: #DDD;
-        font-size: 1.6rem;
+        font-size: 0.8rem;
         position: fixed;
         bottom: 16px;
         left: 16px;
       }
       #now {
         color: #DDD;
-        font-size: 1.6rem;
+        font-size: 0.8rem;
         position: fixed;
         bottom: 16px;
         right: 16px;
@@ -188,6 +188,12 @@
         ul {
           font-size: 1.6rem;
           padding: 2.4rem 0;
+        }
+        .dataFrom {
+          font-size: 1.6rem;
+        }
+        #now {
+          font-size: 1.6rem;
         }
       }
     </style>
